--- a/templates/blog.html
+++ b/templates/blog.html
@@ -249,7 +249,7 @@
 
                                     <ul class="mil-category-list">
                                         {% for category in categories %}
-                                        <li><a href="#">{{category.name}}</a></li>
+                                        <li><a href="?category={{category.id}}">{{category.name}}</a></li>
                                         {% endfor %}
                                         <li><a href="#" class="mil-active">All categories</a></li>
                                         
